services/ticketmaster/http/deployment.yaml
---
# Source: ticketmaster/templates/services/ticketmaster/http/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketmaster
  labels:
    app: ticketmaster
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ticketmaster
  template:
    metadata:
      labels:
        app: ticketmaster
    spec:
      serviceAccountName: ticketmaster
      terminationGracePeriodSeconds: 90
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: ticketmaster
      containers:
        - name: ticketmaster
          image: '258167965416.dkr.ecr.eu-central-1.amazonaws.com/ticketmaster:c1ff93942ad259df597e98ac286ac0d181d75fa0'
          command: ["poetry", "run", "uvicorn"]
          args:
            - "ticketmaster.http.main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8080"
            - "--timeout-keep-alive"
            - "75"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /health-check
              port: http
          readinessProbe:
            httpGet:
              path: /readiness-check
              port: http
