services/ticketmaster/http/service.yaml
---
# Source: ticketmaster/templates/services/ticketmaster/http/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketmaster
  labels:
    app: ticketmaster
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ticketmaster
